--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,34 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://satori-a.akamaihd.net/satori-rtm-sdk/v1.0.2/sdk.min.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script>
+
+	var endpoint = "wss://open-data.api.satori.com";
+	var appKey = "a6bAEb4ab694BBc75fB1f4aaA3D380f7";
+	var channel = "Twitter-statuses-sample";
+
+	var client = new RTM(endpoint, appKey);
+
+	client.on('enter-connected', function () {
+	  console.log('Connected to Satori RTM!');
+	});
+
+	var subscription = client.subscribe(channel, RTM.SubscriptionMode.SIMPLE);
+
+	subscription.on('rtm/subscription/data', function (pdu) {
+	  pdu.body.messages.forEach(function (msg) {
+	  	if (msg.user && msg.user.location) {
+	    	console.log('Got message:', msg.text, 'from: ', msg.user.location);
+	  	}
+	  });
+	});
+
+//	client.start();
+    </script>
 </body>
 </html>
